samples/_failures_safe/1761716526_504a14_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d8a1906.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_3d8a1906.c:178:28: error: expected ‘)’ at end of input
  178 |         switch (token->type
      |                ~           ^
      |                            )
./samples/SAFE/__tmp_3d8a1906.c:178:9: error: expected declaration or statement at end of input
  178 |         switch (token->type
      |         ^~~~~~
./samples/SAFE/__tmp_3d8a1906.c:178:9: error: expected declaration or statement at end of input
